grammar.txt
Program -> Statement*
Statement -> Declaration
Statement -> Assignment
Statement -> Print
Statement -> If
Statement -> While
Declaration -> ank IDENTIFIER ;
Assignment -> IDENTIFIER = Expression ;
Print -> bol IDENTIFIER ;
If -> agar ( Expression ) Statement naito Statement
If -> agar ( Expression ) Statement
While -> jabtak ( Expression ) Statement
Expression -> IDENTIFIER
Expression -> NUMBER
Expression -> Expression + Expression
